# VOCA

./: .gitignore  BLOG_POST.md  README.md  app.py  errors.py  intent.py  pipeline.py  pyproject.toml  stt.py  tools.py  voice_agent_problem_statement.md
static/: index.html  script.js  style.css
