[project]
name = "voca"
version = "0.1.0"
description = "A fully local, privacy-preserving voice-controlled AI agent"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.0",
    "ollama>=0.4.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "python-multipart>=0.0.26",
    "aiofiles>=25.1.0",
]
